--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-import streamlit as st
-import numpy as np
-import pandas as pd
-import pickle
-import time
-import matplotlib.pyplot as plt
-from sklearn.metrics import confusion_matrix, roc_curve, auc, ConfusionMatrixDisplay
+streamlit as st
+numpy as np
+pandas as pd
+pickle
+time
+matplotlib.pyplot 
+sklearn.metrics import confusion_matrix, roc_curve, auc, ConfusionMatrixDisplay
