--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit
-numpy
-pandas
-scikit-learn
-matplotlib
-pickle5
+streamlit==1.25.0
+numpy>=1.21
+pandas>=1.3
+scikit-learn>=1.0
+matplotlib>=3.5
